# brevium

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  logger.rs  storage.rs
core/src/item/: code.rs  mod.rs  text.rs  types.rs
extension/: README.md
macros/: Cargo.toml
macros/src/: lib.rs
storage-fs/: Cargo.toml
storage-fs/src/: lib.rs
storage-tantivy/: Cargo.toml
storage-tantivy/src/: lib.rs
